tests/paczka1/small_fuzzy/31262365.err
Error in line 1: S574 A499 74,4
Error in line 5: y6Gbl6gFo A930 16,3
